--- a/style.css
+++ b/style.css
@@ -7,11 +7,48 @@ body {
     background: linear-gradient(to bottom, gray, black);
 }
 
-.container{
-    position: absolute;
-    top: 50%;
+/* Navbar */
+#navbar{
+    position: fixed;
+    top: 0px;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translateX(-50%);
+}
+
+.header{
+    background-color: transparent;
+    margin: 10px;
+    border-radius: 50px;
+    cursor: pointer;
+    border: 1px solid white;
+}
+
+.header-item {
+    color: white;
+    padding: 10px;
+    text-align: center;
+    border-radius: 50px;
+    transition: all 150ms ease-in-out;
+}
+
+.header-item:hover{
+    background-color: black;
+    color: white;
+}
+
+a{
+    text-decoration: none !important;
+}
+
+.active{
+    background-color: lightblue;
+}
+
+/* Body */
+
+#container{
+    position: relative;
+    top: 65px;
 }
 
 img {
