--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,700,300,600,800,400);
+
 html, body {
     height: 100%;
     margin: 0;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing: antialiased !important;
+    color: #fff;
+    overflow-x: hidden;
+    background: #2F3238;
+}
+
+.gap {
+    margin-bottom: 100px;
 }
 
 body {
@@ -52,25 +65,11 @@ a{
 }
 
 img {
-    width: 135px;
-    height: 135px;
-    border-radius: 50%;
+    width: 200px;
+    height: 200px;
 }
 
-.main-title {
-    font-size: 25px;
-    color: white;
-    font-weight: bold;
-    text-align: center;
-}
-
-.sub-title {
-    font-size: 15px;
-    color: white;
-    text-align: center;
-}
-
-.item {
+.project {
     display: flex;
     align-items: center;
     text-decoration: none !important;
@@ -83,21 +82,18 @@ img {
     transition: all 300ms ease-in-out;
 }
 
-.item:hover{
+.project:hover{
     background: black;
     color: white;
+    animation: slide 0.3s linear forwards;
 }
 
-.item .text {
+.project .text {
     flex: 1;
     text-align: center;
     font-size: 15px;
     margin-right: 22px;
     top: 10px;
-}
-
-.item:hover {
-    animation: slide 0.3s linear forwards;
 }
 
 #icon{
