--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html, body {
     color: #fff;
     overflow-x: hidden;
     background: #2F3238;
+    overflow-y: hidden;
 }
 
 .gap {
@@ -61,7 +62,13 @@ a{
 
 #container{
     position: relative;
-    top: 65px;
+    max-height: 100%;
+    overflow-y: scroll;
+    margin-top: 65px;
+}
+
+#projects{
+    height: 400px;
 }
 
 img {
