--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -69,7 +69,13 @@ a{
 
 img {
     width: 200px;
-    height: 200px;
+}
+#img_certificate {
+    width: 310px !important;
+}
+
+.h3{
+    text-decoration: underline;
 }
 
 #section-projects {
