--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -67,9 +67,16 @@ a{
     transform: translate(-50%,-50%);
 }
 
+.section{
+    max-height: 550px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 img {
     width: 200px;
 }
+
 #img_certificate {
     width: 310px !important;
 }
