--- a/resources/css/device-style.css
+++ b/resources/css/device-style.css
@@ -26,7 +26,6 @@
     padding: 10px;
     cursor: pointer;
     transition: all 150ms ease-in-out;
-    margin-top: 15px;
 }
 
 #bars-icon:hover{
@@ -52,6 +51,9 @@
     }
     #device-navbar{
         display: block;
+    }
+    #container-sections{
+        margin-top: 0px;
     }
 }
 
